Fixed goal bar overflow

--- a/public/assets/Styles/06.Goals/GoalsList/GoalsList.scss
+++ b/public/assets/Styles/06.Goals/GoalsList/GoalsList.scss
@@ -19,6 +19,7 @@
       background-color: white;
       border: 1px solid #696969;
       border-radius: 10px;
+      overflow: hidden;
       .status-bar {
         height: 100%;
         border-radius: 10px;
